some errors fixed

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,6 +14,8 @@ RUN apk --no-cache --update \
     php81-mysqlnd \
     php81-xml \
     php81-simplexml \
+    php81-xmlwriter \
+    php81-tokenizer \
     php81-cli \
     php81-phar \
     php81-dom  \
