--- a/test/env.sample
+++ b/test/env.sample
@@ -4,4 +4,11 @@ KAART_NLGIS_DB=<db with historical municipality data>
 KAART_GEO_DB_HOST=<db host>
 KAART_GEO_DB_USER=<db user>
 KAART_GEO_DB_PASSWORD=<db password>
-
+KAART_REMOTE_SERVER_HOSTNAME=<hostname>
+KAART_REMOTE_SERVER_PATH=/
+KAART_REMOTE_SERVER_PORT=443
+KAART_REMOTE_SERVER_PROTOCOL=https
+KAART_LOCAL_SERVER_HOSTNAME=localhost
+KAART_LOCAL_SERVER_PATH=/
+KAART_LOCAL_SERVER_PORT=8088
+KAART_LOCAL_SERVER_PROTOCOL=http
