--- a/env.sample
+++ b/env.sample
@@ -4,4 +4,4 @@ KAART_NLGIS_DB=<db with historical municipality data>
 KAART_GEO_DB_HOST=<db host>
 KAART_GEO_DB_USER=<db user>
 KAART_GEO_DB_PASSWORD=<db password>
-REST_ALLOWED_CLIENTS='["127.0.0.1", "172.25.0.1", "172.24.0.1", ...]'
+REST_ALLOWED_CLIENTS='["127.0.0.1"]'
