--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,15 @@
     {
       "type": "vcs",
       "url": "https://github.com/meertensinstituut/kaart"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/meertensinstituut/xml-rpc"
     }
   ],
   "require": {
-    "meertensinstituut/kaart": "v3.1.2",
+    "meertensinstituut/kaart": "v3.1.3",
+    "meertensinstituut/xml-rpc": "v1.5.5",
     "ext-curl": "*"
   },
   "require-dev": {
