--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "meertensinstituut/kaart-webservices",
   "require": {
-    "meertensinstituut/kaart": "v3.1.3",
+    "meertensinstituut/kaart": "^3.1",
     "meertensinstituut/xml-rpc": "v1.5.5.1",
     "ext-curl": "*"
   },
