--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "meertensinstituut/kaart-webservices",
   "require": {
     "meertensinstituut/kaart": "^3.1",
-    "meertensinstituut/xml-rpc": "v1.5.5.1",
+    "meertensinstituut/xml-rpc": "^1.5.5",
     "ext-curl": "*"
   },
   "require-dev": {
